--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/OerdBej/myJavaScript#readme",
     "devDependencies": {
+        "prettier-plugin-tailwindcss": "^0.3.0",
         "tailwindcss": "^3.3.2"
     }
 }
