adding the feature section

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "myjavascript",
+    "name": "tailwind-workshop",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
